--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
-     "build": "sh render-build.sh"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
